# Juego_Carrera_IA

./: .gitignore  Hola.txt  README.md  base.txt  carreraHumanoVsIA.py  config.py  escenario.json  estructura.txt  main.py  modoFlask.py  modoTkinder.py  pyproject.toml  requirements.txt  visualAstar.py  visualizador_arbol.py
algorirmos/: astar.py
algorithms/: __init__.py  a_star.py  dijkstra.py  greedy.py  pathfinder_base.py  uniform_cost.py
assets/maps/: custom_map.json  custom_map_1.json  custom_map_2.json  custom_map_3.json  custom_map_4.json  custom_map_5.json  custom_map_6.json  custom_map_7.json  default_map.json
components/: __init__.py  agent.py  button.py  grid.py  tree_visualizer.py
ejemplo_arbol/: visualizer.py
memorias/: HEURISTICS_INFO.md  M1.md  MEMORIA_DESCRIPTIVA.md
scenes/: editor_scene.py  ia_vs_ia_scene.py  map_selection_scene.py  menu_scene.py  race_scene.py  scene_base.py  testing_scene.py
src/carrera_ia/: main.py
utils/: map_manager.py
