[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "carrera-ia"
version = "0.1.0"
description = "Juego Carrera IA - plantilla de proyecto"
authors = [{ name = "Tu Nombre" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
carrera-ia = "carrera_ia.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
